/*
 * Licensed to the Apache Software Foundation (ASF) under one
 * or more contributor license agreements. See the NOTICE file
 * distributed with this work for additional information
 * regarding copyright ownership. The ASF licenses this file
 * to you under the Apache License, Version 2.0 (the
 * "License"); you may not use this file except in compliance
 * with the License. You may obtain a copy of the License at
 *
 *   http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing,
 * software distributed under the License is distributed on an
 * "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
 * KIND, either express or implied. See the License for the
 * specific language governing permissions and limitations
 * under the License.
 *
 */

syntax = "proto3";

option java_multiple_files = true;
package org.apache.custos.tenant.profile.service;

message Tenant {
    int64 tenantId = 1;
    string tenantName = 2;
    string requesterEmail = 4;
    string adminFirstName = 5;
    string adminLastName = 6;
    string adminEmail = 7;
    string adminUsername = 8;
    string adminPassword = 9;
    TenantStatus tenantStatus = 10;
    repeated string contacts = 11;
    repeated string redirectURIs = 12;
    string tenantURI = 13;
    string scope = 14;
    string domain = 15;
}

enum TenantStatus {
    REQUESTED = 0;
    APPROVED = 1;
    DENIED = 2;
    CANCELLED = 3;
    ACTIVE = 4;
    DEACTIVATED = 5;
}

message TenantAttributeUpdateMetadata {
    string updatedAttribute = 1;
    string updatedAttributeValue = 2;
    string updatedBy = 3;
    string updatedAt = 4;
}

message TenantStatusUpdateMetadata {
    TenantStatus updatedStatus = 1;
    string updatedBy = 2;
    string updatedAt = 3;
}


message AddTenantResponse {
    int64 tenantId = 1;
}

message UpdateTenantRequest {
    Tenant tenant = 1;
    string updatedBy = 2;
}

message UpdateTenantResponse {
    Tenant tenant = 1;

}

message GetTenantRequest {
    int64 tenantId = 1;
}

message GetTenantResponse {
    Tenant tenant = 1;
}


message GetAllTenantsResponse {
    repeated Tenant tenant = 1;
}

message IsTenantExistRequest {
    int64 tenantId = 1;
}

message IsTenantExistResponse {
    bool isExist = 1;
}

message GetAllTenantsForUserRequest {
    string requesterUserName = 1;
}

message GetAllTenantsForUserResponse {
    repeated Tenant tenant = 1;
}

message UpdateStatusRequest {
    int64 tenantId = 1;
    TenantStatus status = 2;
    string updatedBy = 3;
}

message UpdateStatusResponse {
    int64 tenantId = 1;
    TenantStatus status = 2;
}

message GetAuditTrailRequest {
    int64 tenantId = 1;
}

message GetStatusUpdateAuditTrailResponse {
    repeated TenantStatusUpdateMetadata metadata = 1;
}

message GetAttributeUpdateAuditTrailResponse {
    repeated TenantAttributeUpdateMetadata metadata = 2;
}


message Empty {

}

service TenantProfileService {
    rpc addTenant (Tenant) returns (AddTenantResponse);
    rpc updateTenant (UpdateTenantRequest) returns (UpdateTenantResponse);
    rpc getTenant (GetTenantRequest) returns (GetTenantResponse);
    rpc updateTenantStatus (UpdateStatusRequest) returns (UpdateStatusResponse);
    rpc getAllTenants (Empty) returns (GetAllTenantsResponse);
    rpc isTenantExist (IsTenantExistRequest) returns (IsTenantExistResponse);
    rpc getAllTenantsForUser (GetAllTenantsForUserRequest) returns (GetAllTenantsForUserResponse);
    rpc getTenantStatusUpdateAuditTrail (GetAuditTrailRequest) returns (GetStatusUpdateAuditTrailResponse);
    rpc getTenantAttributeUpdateAuditTrail (GetAuditTrailRequest) returns (GetAttributeUpdateAuditTrailResponse);
}